src/test/ui/rfc-2632-const-trait-impl/cross-crate.gated.stderr
error[E0599]: no method named `func` found for struct `cross_crate::NonConst` in the current scope
  --> $DIR/cross-crate.rs:10:14
   |
LL |     NonConst.func();
   |              ^^^^ method not found in `cross_crate::NonConst`

error[E0599]: no method named `func` found for struct `cross_crate::NonConst` in the current scope
  --> $DIR/cross-crate.rs:15:14
   |
LL |     NonConst.func();
   |              ^^^^ method not found in `cross_crate::NonConst`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0599`.
